# Transformer_cpp

./: AUTO_DOWNLOAD_SENTENCEPIECE.md  BATCH_CONSTRUCTOR_ANALYSIS.md  BATCH_TOKENIZATION_ANALYSIS.md  BEST_SOLUTION_ANALYSIS.md  CMakeLists.txt  COMPREHENSIVE_ANALYSIS_REPORT.md  CUDA_STREAM_ANALYSIS.md  DELAYED_LOSS_EXTRACTION_IMPLEMENTATION.md  DIFFERENCES_ANALYSIS.md  GPU_EFFICIENCY_ANALYSIS.md  GPU_OPTIMIZATION_GUIDE.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  INDUSTRY_BEST_PRACTICE_ANALYSIS.md  LOCAL_SENTENCEPIECE.md  MEMORY_PREALLOCATION_IMPLEMENTATION.md  MULTITHREADED_TOKENIZATION_IMPLEMENTATION.md  MULTI_PROCESS_LOADER_README.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PIN_MEMORY_IMPLEMENTATION_ANALYSIS.md  README.md  SENTENCEPIECE_SETUP.md  SOLUTION_EXECUTIVE_SUMMARY.md  STAGE2_IMPLEMENTATION_SUMMARY.md  TRAINING_CODE_ISSUES_ANALYSIS.md  TRAINING_DIFFERENCES.md  YOLOV5_OPTIMIZATION_ANALYSIS.md  amp_scaler.cpp  amp_scaler.h  attention.cpp  attention.h  beam_search.cpp  beam_search.h  bleu.cpp  bleu.h  config.h  cuda_stream_manager.cpp  cuda_stream_manager.h  data_cache.cpp  data_cache.h  (+34 more)
